some more styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <title>Flashing</title>
 </head>
 <body>
   <div class = "container">
     <h1>Flash it till you smash it</h1>
-    <div id="card" class="theCard"></div>
+    <div id="card" class="theCard">Click 'Next Card' to begin</div>
     <button id="nextCard" type="button" class=
     'nextCard' name="button">Next Card</button>
     <form id = "addForm">
